@@ -1,29 +1,8 @@
-2025-09-18
-================== Adopt table structure changes in dbo.userlist etc. when Copy and Delete inrespone users:
-	2025-09-18 10:51:06:INFO: CopyInresponseUsers.sql
-	Invoke-sqlcmd : Cannot insert the value NULL into column 'venID', table 'Insight_PoC.dbo.UserList'; column does not 
-	allow nulls. UPDATE fails. 
-	 Msg 515, Level 16, State 2, Procedure , Line 15.
-	At C:\Insight\Utilities\InsightCopyProdToTest-1.8\tools\CopyProdToTest.ps1:697 char:6
-	+ ...             Invoke-sqlcmd -TrustServerCertificate -ServerInstance $Ta ...
-	+                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-		+ CategoryInfo          : InvalidOperation: (:) [Invoke-Sqlcmd], SqlPowerShellSqlExecutionException
-		+ FullyQualifiedErrorId : SqlError,Microsoft.SqlServer.Management.PowerShell.GetScriptCommand
-	 
-	2025-09-18 10:51:06:INFO: DeleteInresponseUsers.sql
-	Invoke-sqlcmd : Column name or number of supplied values does not match table definition. 
-	 Msg 213, Level 16, State 1, Procedure , Line 6.
-	At C:\Insight\Utilities\InsightCopyProdToTest-1.8\tools\CopyProdToTest.ps1:697 char:6
-	+ ...             Invoke-sqlcmd -TrustServerCertificate -ServerInstance $Ta ...
-	+                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-		+ CategoryInfo          : InvalidOperation: (:) [Invoke-Sqlcmd], SqlPowerShellSqlExecutionException
-		+ FullyQualifiedErrorId : SqlError,Microsoft.SqlServer.Management.PowerShell.GetScriptCommand
-		
+2025-10-25
+================== Support SMTPHost setting "Big Value" ( populated by web form SMTP Client Configuration)
 2024-06-11
 ================== Optionally use sp_DatabaseRestore from Brent Ozar to restore the most recent full backup of Source database when regular backups are done with Ola Hallengren scripts.
 - either provide the path name of regular Ola Hallengren backups or let try to find it out automatically by inspection of the SQL Agent job parameters or by the table dbo.commandlog
-2022-03-23
-================== Add options to use different data and log file paths for target database
 ================== Wizard Mode for "adhoc" copies, e.g. for transfer to 2020
 2022-02-25
 ================== Copy SQL Agent Jobs generated by inresponse (category="Inresponse", Job Step with database=SourceDB)
