@@ -9,7 +9,7 @@ Copyright (c) 2024 20-20 Technologies GmbH
 
 ## Overview
 The solution described here is based on Powershell and SQL Scripts. The main script is named "CopyProdToTest.ps1".
-The script runs without any user interaction. All parameters are read from a config file and. Thus, the script can be started automatically by a scheduled task with all output being redirected to a logfile.
+The script runs without any user interaction. All parameters are read from a config file. Thus, the script can be started automatically by a scheduled task with all output being redirected to a logfile.
 These are the main steps of the script (many of them are optional):
 - Take backups of the current Insight and Construct source databases
  -Stop Insight services in the target environment
