@@ -1,3 +1,7 @@
+2025-12-12
+-- Fixed an error regarding the changed structure of dbo.UserList in 14.2
+2025-10-01
+-- Added New installation scripts for Insight 14.4
 2025-06-30
 -- Added New installation scripts for Insight 14.3
 2025-04-29
